client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/OBJ_Order__c.object-meta.xml
<CustomObject>
    <label>OBJ Order</label>
    <nameField>
        <label>OBJ SAP Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBJ SAP Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>