client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_BillingBlock__c.field-meta.xml
<CustomField>
    <fullName>FLD_BillingBlock__c</fullName>
    <label>FLD Billing Block</label>
    <description>SAP Billing Block</description>
    <length>5</length>
    <type>Text</type>
</CustomField>