client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FLD_CreatedBy__c</fullName>
    <label>FLD Created By</label>
    <description>Created By Name</description>
    <length>25</length>
    <type>Text</type>
</CustomField>