client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>FLD_CustomerNumber__c</fullName>
    <label>FLD Customer Number</label>
    <description>SAP Customer Number</description>
    <length>10</length>
    <type>Text</type>
</CustomField>