client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_DeliveryBlock__c.field-meta.xml
<CustomField>
    <fullName>FLD_DeliveryBlock__c</fullName>
    <label>FLD Delivery Block</label>
    <description>SAP Delivery Block</description>
    <length>5</length>
    <type>Text</type>
</CustomField>