client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>FLD_DistributionChannel__c</fullName>
    <label>FLD Distribution Channel</label>
    <description>SAP Distribution Channel</description>
    <length>5</length>
    <type>Text</type>
</CustomField>