client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_Division__c.field-meta.xml
<CustomField>
    <fullName>FLD_Division__c</fullName>
    <label>FLD Division</label>
    <description>SAP Division</description>
    <length>5</length>
    <type>Text</type>
</CustomField>