client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_Incoterms1__c.field-meta.xml
<CustomField>
    <fullName>FLD_Incoterms1__c</fullName>
    <label>FLD Incoterms1</label>
    <description>SAP Incoterms1</description>
    <length>5</length>
    <type>Text</type>
</CustomField>