client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_Incoterms2__c.field-meta.xml
<CustomField>
    <fullName>FLD_Incoterms2__c</fullName>
    <label>FLD Incoterms2</label>
    <description>SAP Incoterms2</description>
    <length>30</length>
    <type>Text</type>
</CustomField>