client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_NetOrderValue__c.field-meta.xml
<CustomField>
    <fullName>FLD_NetOrderValue__c</fullName>
    <label>FLD Net Order Value</label>
    <description>SAP Net Order Value</description>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>