client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_PurchaseOrderDate__c.field-meta.xml
<CustomField>
    <fullName>FLD_PurchaseOrderDate__c</fullName>
    <label>FLD Purchase Order Date</label>
    <description>SAP Purchase Order Date</description>
    <type>Date</type>
</CustomField>