client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_SalesDocument__c.field-meta.xml
<CustomField>
    <fullName>FLD_SalesDocument__c</fullName>
    <label>FLD Sales Document Number</label>
    <description>SAP Sales Document Number</description>
    <length>10</length>
    <type>Text</type>
</CustomField>