client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>FLD_SalesOrganization__c</fullName>
    <label>FLD Sales Organization</label>
    <description>SAP Sales Organization</description>
    <length>5</length>
    <type>Text</type>
</CustomField>