client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_ShipToNumber__c.field-meta.xml
<CustomField>
    <fullName>FLD_ShipToNumber__c</fullName>
    <label>FLD ShipTo Number</label>
    <description>SAP ShipTo Number</description>
    <length>10</length>
    <type>Text</type>
</CustomField>