client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_TermsofPaymentKey__c.field-meta.xml
<CustomField>
    <fullName>FLD_TermsofPaymentKey__c</fullName>
    <label>FLD Terms of Payment Key</label>
    <description>SAP Terms of Payment Key</description>
    <length>6</length>
    <type>Text</type>
</CustomField>