client-app/uncommon-sync/salesdoc-sync/order-sync/objects/OBJ_Order__c/fields/FLD_TransactionGroup__c.field-meta.xml
<CustomField>
    <fullName>FLD_TransactionGroup__c</fullName>
    <label>FLD Transaction Group</label>
    <description>SAP Transaction Group</description>
    <length>5</length>
    <type>Text</type>
</CustomField>